# renderAirplane

./: .clang-format  .gitmodules  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: camera.h  opengl_context.h  utils.h
script/: release.sh
src/: CMakeLists.txt  camera.cpp  main.cpp  opengl_context.cpp
vs2019/: HW1.sln  HW1.vcxproj  HW1.vcxproj.filters
vs2019/glfw/: glfw.vcxproj  glfw.vcxproj.filters
